upgraded encrypt uri plus fixed some tests

--- a/tests/aleksey-xmlenc-01/enc-des3cbc-aes192-keyname.tmpl
+++ b/tests/aleksey-xmlenc-01/enc-des3cbc-aes192-keyname.tmpl
@@ -10,5 +10,7 @@
 	<CipherData />
     </EncryptedKey>
   </KeyInfo>   
-  <CipherData></CipherData>
+  <CipherData>
+     <CipherValue />
+  </CipherData>
 </EncryptedData>
