--- a/tests/aleksey-xmlenc-01/enc-des3cbc-keyname2.tmpl
+++ b/tests/aleksey-xmlenc-01/enc-des3cbc-keyname2.tmpl
@@ -4,5 +4,7 @@
   <KeyInfo xmlns="http://www.w3.org/2000/09/xmldsig#">
      <KeyName />
   </KeyInfo>   
-  <CipherData />
+  <CipherData>
+<CipherValue />
+</CipherData>
 </EncryptedData>
