--- a/tests/aleksey-xmlenc-01/enc-aes192cbc-keyname.tmpl
+++ b/tests/aleksey-xmlenc-01/enc-aes192cbc-keyname.tmpl
@@ -4,5 +4,8 @@
   <KeyInfo xmlns="http://www.w3.org/2000/09/xmldsig#">
      <KeyName>test-aes192</KeyName>
   </KeyInfo>   
-  <CipherData />
+  <CipherData>
+     <CipherValue>
+     </CipherValue>
+  </CipherData>
 </EncryptedData>
