--- a/tests/aleksey-xmlenc-01/enc-des3cbc-keyname.tmpl
+++ b/tests/aleksey-xmlenc-01/enc-des3cbc-keyname.tmpl
@@ -4,5 +4,5 @@
   <KeyInfo xmlns="http://www.w3.org/2000/09/xmldsig#">
      <KeyName />
   </KeyInfo>   
-  <CipherData />
+  <CipherData><CipherValue /></CipherData>
 </EncryptedData>
