--- a/tests/aleksey-xmlenc-01/enc-des3cbc-keyname-element.tmpl
+++ b/tests/aleksey-xmlenc-01/enc-des3cbc-keyname-element.tmpl
@@ -7,5 +7,5 @@
   <KeyInfo xmlns="http://www.w3.org/2000/09/xmldsig#">
     <KeyName>test-des</KeyName>
   </KeyInfo>   
-  <CipherData></CipherData>
+  <CipherData><CipherValue/></CipherData>
 </EncryptedData>
