encryption is almost finished

--- a/tests/aleksey-xmlenc-01/enc-des3cbc-aes192-keyname.tmpl
+++ b/tests/aleksey-xmlenc-01/enc-des3cbc-aes192-keyname.tmpl
@@ -7,7 +7,7 @@
 	<KeyInfo xmlns="http://www.w3.org/2000/09/xmldsig#">
     	    <KeyName>test-aes192</KeyName>
 	</KeyInfo>   
-	<CipherData />
+	<CipherData><CipherValue /></CipherData>
     </EncryptedKey>
   </KeyInfo>   
   <CipherData>
