implemented SHA224/256/384/512, HMAC-SHA224/256/384/512, MD5 for OpenSSL
* configure.in docs/ include/ src/ tests/: implemented
SHA224/256/384/512, HMAC-SHA224/256/384/512, MD5 for OpenSSL 0.9.8

--- a/tests/aleksey-xmldsig-01/enveloping-ripemd160-hmac-ripemd160-64.tmpl
+++ b/tests/aleksey-xmldsig-01/enveloping-ripemd160-hmac-ripemd160-64.tmpl
@@ -6,7 +6,7 @@
       <HMACOutputLength>64</HMACOutputLength>
     </SignatureMethod>
     <Reference URI="#object">
-      <DigestMethod Algorithm="http://www.w3.org/2000/09/xmldsig#sha1" />
+      <DigestMethod Algorithm="http://www.w3.org/2001/04/xmlenc#ripemd160"/>
       <DigestValue></DigestValue>
     </Reference>
   </SignedInfo>
