--- a/tests/aleksey-xmldsig-01/enveloping-sha384-hmac-sha384.tmpl
+++ b/tests/aleksey-xmldsig-01/enveloping-sha384-hmac-sha384.tmpl
@@ -2,9 +2,9 @@
 <Signature xmlns="http://www.w3.org/2000/09/xmldsig#">
   <SignedInfo>
     <CanonicalizationMethod Algorithm="http://www.w3.org/TR/2001/REC-xml-c14n-20010315" />
-    <SignatureMethod Algorithm="http://www.w3.org/2001/04/xmldsig-more#hmac-ripemd160" />
+    <SignatureMethod Algorithm="http://www.w3.org/2001/04/xmldsig-more#hmac-sha384"/>
     <Reference URI="#object">
-      <DigestMethod Algorithm="http://www.w3.org/2000/09/xmldsig#sha1" />
+      <DigestMethod Algorithm="http://www.w3.org/2001/04/xmldsig-more#sha384"/>
       <DigestValue></DigestValue>
     </Reference>
   </SignedInfo>
