--- a/tests/aleksey-xmldsig-01/enveloping-sha512-hmac-sha512.tmpl
+++ b/tests/aleksey-xmldsig-01/enveloping-sha512-hmac-sha512.tmpl
@@ -2,11 +2,9 @@
 <Signature xmlns="http://www.w3.org/2000/09/xmldsig#">
   <SignedInfo>
     <CanonicalizationMethod Algorithm="http://www.w3.org/TR/2001/REC-xml-c14n-20010315" />
-    <SignatureMethod Algorithm="http://www.w3.org/2001/04/xmldsig-more#hmac-md5">
-      <HMACOutputLength>64</HMACOutputLength>
-    </SignatureMethod>
+    <SignatureMethod Algorithm="http://www.w3.org/2001/04/xmldsig-more#hmac-sha512"/>
     <Reference URI="#object">
-      <DigestMethod Algorithm="http://www.w3.org/2000/09/xmldsig#sha1" />
+      <DigestMethod Algorithm="http://www.w3.org/2001/04/xmlenc#sha512"/>
       <DigestValue></DigestValue>
     </Reference>
   </SignedInfo>
