--- a/tests/aleksey-xmlenc-01/enc-aes256-kt-rsa_oaep_sha1-params.tmpl
+++ b/tests/aleksey-xmlenc-01/enc-aes256-kt-rsa_oaep_sha1-params.tmpl
@@ -5,9 +5,7 @@
 		  <EncryptedKey Id="EK" xmlns="http://www.w3.org/2001/04/xmlenc#">
  		    <EncryptionMethod Algorithm="http://www.w3.org/2001/04/xmlenc#rsa-oaep-mgf1p">
   		      <ds:DigestMethod Algorithm="http://www.w3.org/2000/09/xmldsig#sha1" xmlns:ds="http://www.w3.org/2000/09/xmldsig#"/>
-                        <OAEPparams>
-                          MTIzNDU2Nzg=
-                        </OAEPparams>
+                        <OAEPparams>MTIzNDU2Nzg=</OAEPparams>
                     </EncryptionMethod>
 	        <ds:KeyInfo xmlns:ds="http://www.w3.org/2000/09/xmldsig#">
                   <ds:KeyName>my-rsa-key</ds:KeyName>
