--- a/tests/merlin-xmldsig-twenty-three/signature-keyname.tmpl
+++ b/tests/merlin-xmldsig-twenty-three/signature-keyname.tmpl
@@ -11,6 +11,8 @@
   <SignatureValue>
   </SignatureValue>
   <KeyInfo>
-    <KeyName>mykey</KeyName>
+    <KeyName>
+	mykey
+    </KeyName>
   </KeyInfo>
 </Signature>
