Automatically set key name from PKCS12 name (openssl)

--- a/tests/aleksey-xmldsig-01/enveloped-sha1-rsa-sha1.tmpl
+++ b/tests/aleksey-xmldsig-01/enveloped-sha1-rsa-sha1.tmpl
@@ -20,7 +20,7 @@
     </SignedInfo>
     <SignatureValue/>
     <KeyInfo>
-      <KeyName>mykey</KeyName>
+      <KeyName>largersakey</KeyName>
     </KeyInfo>
   </Signature>
 </Envelope>
