--- a/tests/aleksey-xmldsig-01/enveloped-sha1-ecdsa-sha1.tmpl
+++ b/tests/aleksey-xmldsig-01/enveloped-sha1-ecdsa-sha1.tmpl
@@ -20,7 +20,7 @@
     </SignedInfo>
     <SignatureValue/>
     <KeyInfo>
-      <KeyName>mykey</KeyName>
+      <KeyName>TestEcdsaSecp256r1Key</KeyName>
     </KeyInfo>
   </Signature>
 </Envelope>
