Add GNUTL GOST 2001 key

--- a/tests/aleksey-xmldsig-01/enveloped-gost2001.tmpl
+++ b/tests/aleksey-xmldsig-01/enveloped-gost2001.tmpl
@@ -20,7 +20,7 @@
     </SignedInfo>
     <SignatureValue/>
     <KeyInfo>
-      <KeyName>mykey</KeyName>
+      <KeyName>TestGost2001_Key</KeyName>
       <X509Data>
         <X509Certificate></X509Certificate>
       </X509Data>
