--- a/tests/aleksey-xmldsig-01/enveloped-gost2012-256.tmpl
+++ b/tests/aleksey-xmldsig-01/enveloped-gost2012-256.tmpl
@@ -20,7 +20,7 @@
     </SignedInfo>
     <SignatureValue/>
     <KeyInfo>
-      <KeyName>mykey</KeyName>
+      <KeyName>TestGost2012_256Key</KeyName>
       <X509Data>
       </X509Data>
     </KeyInfo>
