--- a/tests/aleksey-xmldsig-01/enveloped-sha256-rsa-sha256.tmpl
+++ b/tests/aleksey-xmldsig-01/enveloped-sha256-rsa-sha256.tmpl
@@ -6,7 +6,7 @@
   <Signature xmlns="http://www.w3.org/2000/09/xmldsig#">
     <SignedInfo>
       <CanonicalizationMethod Algorithm="http://www.w3.org/TR/2001/REC-xml-c14n-20010315" />
-      <SignatureMethod Algorithm="http://www.w3.org/2001/04/xmldsig-more#ecdsa-sha256"/>
+      <SignatureMethod Algorithm="http://www.w3.org/2001/04/xmldsig-more#rsa-sha256"/>
       <Reference URI="">
         <Transforms>
           <Transform Algorithm="http://www.w3.org/2000/09/xmldsig#enveloped-signature" />
@@ -20,7 +20,7 @@
     </SignedInfo>
     <SignatureValue/>
     <KeyInfo>
-      <KeyName>TestEcdsaSecp256r1Key</KeyName>
+      <KeyName>largersakey</KeyName>
     </KeyInfo>
   </Signature>
 </Envelope>
