Fix test key name

--- a/tests/aleksey-xmldsig-01/enveloped-sha512-mldsa44.tmpl
+++ b/tests/aleksey-xmldsig-01/enveloped-sha512-mldsa44.tmpl
@@ -20,7 +20,7 @@
     </SignedInfo>
     <SignatureValue/>
     <KeyInfo>
-      <KeyName>TestMLDSA44KeName</KeyName>
+      <KeyName>TestKeyName-ML-DSA-44</KeyName>
     </KeyInfo>
   </Signature>
 </Envelope>
