(xmlsec-tests) Create scripts to generate keys and update tests with new keys

--- a/tests/aleksey-xmldsig-01/enveloped-sha512-mldsa44-with-context-string.tmpl
+++ b/tests/aleksey-xmldsig-01/enveloped-sha512-mldsa44-with-context-string.tmpl
@@ -22,7 +22,7 @@
     </SignedInfo>
     <SignatureValue/>
     <KeyInfo>
-      <KeyName>TestKeyName-ML-DSA-44</KeyName>
+      <KeyName>TestKeyName-ml-dsa-44</KeyName>
     </KeyInfo>
   </Signature>
 </Envelope>
