--- a/tests/aleksey-xmldsig-01/enveloped-sha512-mldsa87.tmpl
+++ b/tests/aleksey-xmldsig-01/enveloped-sha512-mldsa87.tmpl
@@ -20,7 +20,7 @@
     </SignedInfo>
     <SignatureValue/>
     <KeyInfo>
-      <KeyName>TestKeyName-ML-DSA-87</KeyName>
+      <KeyName>TestKeyName-ml-dsa-87</KeyName>
     </KeyInfo>
   </Signature>
 </Envelope>
