--- a/tests/aleksey-xmldsig-01/enveloped-x509-subjectname.tmpl
+++ b/tests/aleksey-xmldsig-01/enveloped-x509-subjectname.tmpl
@@ -21,7 +21,7 @@
     <SignatureValue/>
     <KeyInfo>
       <X509Data>
-        <X509SubjectName>C=US, ST=California, O=XML Security Library (http://www.aleksey.com/xmlsec), CN=Test Key rsa-4096</X509SubjectName>
+        <X509SubjectName>CN=Test Key rsa-4096,O=XML Security Library (http://www.aleksey.com/xmlsec),ST=California,C=US</X509SubjectName>
       </X509Data>
     </KeyInfo>
   </Signature>
