--- a/tests/aleksey-xmlenc-01/enc_rsa_1_5_x509_issuer_name_serial.tmpl
+++ b/tests/aleksey-xmlenc-01/enc_rsa_1_5_x509_issuer_name_serial.tmpl
@@ -7,7 +7,7 @@
       <KeyInfo xmlns="http://www.w3.org/2000/09/xmldsig#">
         <X509Data>
           <X509IssuerSerial>
-            <X509IssuerName>C=US, ST=California, O=XML Security Library (http://www.aleksey.com/xmlsec), CN=Aleksey Sanin, emailAddress=xmlsec@aleksey.com</X509IssuerName>
+            <X509IssuerName>emailAddress=xmlsec@aleksey.com,CN=Aleksey Sanin,O=XML Security Library (http://www.aleksey.com/xmlsec),ST=California,C=US</X509IssuerName>
             <X509SerialNumber>12655831530416757462</X509SerialNumber>
           </X509IssuerSerial>
         </X509Data>
