--- a/tests/aleksey-xmlenc-01/enc_rsa_1_5_x509_digest_sha1.tmpl
+++ b/tests/aleksey-xmlenc-01/enc_rsa_1_5_x509_digest_sha1.tmpl
@@ -9,6 +9,12 @@
           <dsig11:X509Digest xmlns:dsig11="http://www.w3.org/2009/xmldsig11#" Algorithm="http://www.w3.org/2000/09/xmldsig#sha1">
             Vz1WtV9HeBwMhnDMTDgkIODXz0I=
           </dsig11:X509Digest>
+          <X509Digest xmlns="http://www.w3.org/2009/xmldsig11#" Algorithm="http://www.w3.org/2000/09/xmldsig#sha1">
+          1nwNaOvFfnwFCD7HCO1HFjrzgSc=
+          </X509Digest>
+          <X509Digest xmlns="http://www.w3.org/2009/xmldsig11#" Algorithm="http://www.w3.org/2000/09/xmldsig#sha1">
+          pzXVn5GWMr0L6WwkGXlc/1VEHts=
+          </X509Digest>
         </X509Data>
       </KeyInfo>
       <CipherData>
