--- a/tests/xmldsig11-interop-2012/signature-enveloping-x509digest-rsa.tmpl
+++ b/tests/xmldsig11-interop-2012/signature-enveloping-x509digest-rsa.tmpl
@@ -14,6 +14,12 @@
       <dsig11:X509Digest xmlns:dsig11="http://www.w3.org/2009/xmldsig11#" Algorithm="http://www.w3.org/2001/04/xmlenc#sha256">
       egcSrKXWYd63RpuMmr8XtogW2SDZduB9TMVq5pYliT8=
       </dsig11:X509Digest>
+      <X509Digest xmlns="http://www.w3.org/2009/xmldsig11#" Algorithm="http://www.w3.org/2001/04/xmlenc#sha256">
+      8UV4ut9Bx0NE9LkFkYDNejB4HoQwNaBCj74u/P9n5rc=
+      </X509Digest>
+      <X509Digest xmlns="http://www.w3.org/2009/xmldsig11#" Algorithm="http://www.w3.org/2001/04/xmlenc#sha256">
+      +MjyBd0A5dGfqY6DVfRi+07bvjwlPJ8a0AVFgUz7IGk=
+      </X509Digest>
     </dsig:X509Data>
   </dsig:KeyInfo>
   <dsig:Object Id="DSig.Object_QJnJQxCUj6aHHt1qjOkXSg22" MimeType="text/xml">
